# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.637 2008-04-19 12:46:49 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (GPL). If you
# did not receive this file, see http://www.gnu.org/licenses/gpl-2.0.txt.
# --

CVS HEAD (????/??/??)
 - (2007/04/18) Let FrontendOutputFilters have access to LayoutObject and TemplateFile.
 - (2007/04/18) Added Title-Attribute (for Tooltips) to BuildSelection.
 - (2007/04/14) Increased db2 BLOB size from 20M to 30M in
    scripts/database/otrs-schema.db2.sql.
 - (2007/04/14) Improved admin interface, show only links with own permissions.
    So it's possible/easy to create sub admins for part administration
    (Fixed bug# 2535 - User is able to access admin menu).
 - (2007/04/14) Improved .opm packages to definde pre and post Code* and
    Database* tags to define time point of execution. For more info how to use
    it see developer manual.
 - (2007/04/14) Renamed .opm package tags for intro messages
    Intro(Install|Upgrade|Unintall)(Pre|Post) from <IntroInstallPost> to new
    format like <IntroInstall Type="post">. For more info see developer manual.
    Note: Old tags still usable, will be converted by OTRS automatically.
 - (2007/04/10) Added global Search-Condition-Feature (AND/OR/()/!/+) to ticket
    search backend, customer search backend and faq.
 - (2007/04/10) Added support to ticket print to select only one article to print.
 - (2007/04/10) Added bug# 2159 - ticket close time as attributes (like ticket
    create time) in agent ticket search.
 - (2007/04/10) Updated cpan module CGI to version 3.35.
 - (2008/04/02) Moved from default password 'crypt' method to 'md5'. All new
    changed passwords are stored with md5-password method. Old stored passwords
    still usable.
 - (2008/04/02) Fixed bug#1952 - Superfluous error messages by