@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.637 2008-04-19 12:46:49 martin Exp $
+# $Id: CHANGES,v 1.638 2008-04-19 23:10:26 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -10,6 +10,8 @@
 # --
 
 CVS HEAD (????/??/??)
+ - (2007/04/20) Changed GenericAgent default limit of matching ticket for each
+    run of a job from 2000 to 4000.
  - (2007/04/18) Let FrontendOutputFilters have access to LayoutObject and TemplateFile.
  - (2007/04/18) Added Title-Attribute (for Tooltips) to BuildSelection.
  - (2007/04/14) Increased db2 BLOB size from 20M to 30M in
